--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "marked": "^11.2.0",
+    "marked-mangle": "^1.1.6",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
